# nonebot-plugin-beauty-rater

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pyright.yml  ruff.yml
nonebot_plugin_beauty_rater/: __init__.py  config.py  utils.py
nonebot_plugin_beauty_rater/i18n/: .config.json  .lang.schema.json  .template.json  .template.schema.json  __init__.py  en-US.json  model.py  zh-CN.json
