[project]
name = "nonebot-plugin-beauty-rater"
version = "0.1.3"
description = "NoneBot2 颜值打分插件"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "KomoriDev", email = "mute231010@gmail.com" },
]
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-plugin-alconna>=0.46.4",
    "nonebot-plugin-waiter>=0.6.1",
    "pillow>=10.3.0",
    "httpx>=0.27.0",
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/KomoriDev/nonebot-plugin-beauty-rater"
repository = "https://github.com/KomoriDev/nonebot-plugin-beauty-rater"

[project.optional-dependencies]
adapters = [
    "nonebot-adapter-onebot>=2.4.3",
]
[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.2",
    "black>=24.4.2",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]


[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901"]
line-length = 120
target-version = "py310"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
